--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ body {
     font-weight: 500;
 }
 
-#listings {
-    list-style: disc inside;
+.link_list{
+    display: flex;
+    justify-content: center;
+
+}
+.link_list ul{
+    padding: 30px 0;
+    list-style: none;
+    margin: 10px 200px;
 }
